[gd_scene load_steps=14 format=3 uid="uid://b2efnbwkif58l"]

[ext_resource type="SystemFont" uid="uid://rclpa6tx4mek" path="res://ui/default_font.tres" id="1_mmhf5"]
[ext_resource type="Script" path="res://ui/Inventory.gd" id="1_y87oe"]
[ext_resource type="Texture2D" uid="uid://ccg06vl2oblfy" path="res://assets/UI/道具指示文字背景黑块.png" id="2_qtkv7"]
[ext_resource type="Texture2D" uid="uid://bc8mhrhuiwrbx" path="res://assets/UI/道具栏的左箭头.png" id="3_h7rnr"]
[ext_resource type="Texture2D" uid="uid://bqvugf4fsfg7p" path="res://assets/UI/道具栏的左箭头按下.png" id="4_c5hig"]
[ext_resource type="Texture2D" uid="uid://dwtthaxi0d7f7" path="res://assets/UI/道具栏的左箭头不可用.png" id="5_oj0kf"]
[ext_resource type="Texture2D" uid="uid://d15d2vegfumn1" path="res://assets/UI/道具栏.png" id="6_hq2gx"]
[ext_resource type="Texture2D" uid="uid://wiapw1qh1ipg" path="res://assets/H2/key.png" id="7_cihjc"]
[ext_resource type="Texture2D" uid="uid://dvenncujq6ty7" path="res://assets/UI/抓着道具的手.png" id="8_ttw8i"]
[ext_resource type="Texture2D" uid="uid://dwlhxxe2h03te" path="res://assets/UI/道具栏的右箭头.png" id="9_6vndd"]
[ext_resource type="Texture2D" uid="uid://c56ig0re3kkwu" path="res://assets/UI/道具栏的右箭头按下.png" id="10_qrht8"]
[ext_resource type="Texture2D" uid="uid://csiu1njic2t2d" path="res://assets/UI/道具栏的右箭头不可用.png" id="11_6hjkv"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_keo46"]
texture = ExtResource("2_qtkv7")
texture_margin_left = 44.0
texture_margin_top = 25.0
texture_margin_right = 43.0
texture_margin_bottom = 24.0
region_rect = Rect2(-1, 0, 365, 122)

[node name="Inventory" type="VBoxContainer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -370.0
offset_top = -344.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 10
alignment = 2
script = ExtResource("1_y87oe")

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(354, 114)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_mmhf5")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_keo46")
text = "道具描述"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="Label"]
wait_time = 1.5
one_shot = true

[node name="ItemBar" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8

[node name="Prev" type="TextureButton" parent="ItemBar"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("3_h7rnr")
texture_pressed = ExtResource("4_c5hig")
texture_disabled = ExtResource("5_oj0kf")

[node name="Use" type="TextureButton" parent="ItemBar"]
layout_mode = 2
texture_normal = ExtResource("6_hq2gx")

[node name="Prop" type="Sprite2D" parent="ItemBar/Use"]
z_index = 1
position = Vector2(110, 113)
texture = ExtResource("7_cihjc")

[node name="Hand" type="Sprite2D" parent="ItemBar/Use"]
z_index = 1
position = Vector2(173, 156)
texture = ExtResource("8_ttw8i")

[node name="Next" type="TextureButton" parent="ItemBar"]
layout_mode = 2
size_flags_vertical = 4
texture_normal = ExtResource("9_6vndd")
texture_pressed = ExtResource("10_qrht8")
texture_disabled = ExtResource("11_6hjkv")

[connection signal="timeout" from="Label/Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="ItemBar/Prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="ItemBar/Use" to="." method="_on_use_pressed"]
[connection signal="pressed" from="ItemBar/Next" to="." method="_on_next_pressed"]
